# fucking-weeb-rs

./: .gitignore  Cargo.toml  README.md  convert_db.py
arch/: PKGBUILD
src/: db.rs  dirs.rs  main.rs  soup.rs  tmdb.rs
