[package]
name = "fucking-weeb-rs"
version = "0.1.0"
authors = ["Jaume Delclòs Coll <cosarara97@gmail.com>"]

[dependencies.gtk]
version = "0.3"
features = ["v3_16"]

[dependencies.gtk-sys]
version = "0.5"

[dependencies.gdk]
version = "0.7"

[dependencies.gdk-sys]
version = "0.5"

[dependencies.gdk-pixbuf]
version = "0.3"

[dependencies.glib]
version = "0.4"

[dependencies.regex]
version = "0.2"

[dependencies.lazy_static]
version = "1.0"

[dependencies.hyper]
version = "0.10"

[dependencies.hyper-native-tls]
version = "0.2"

[dependencies.json]
version = "0.11"

[dependencies.xdg]
version = "^2.1"

[dependencies.serde]
version = "1.0"

[dependencies.serde_json]
version = "1.0"

[dependencies.serde_derive]
version = "1.0"
