[package]
name = "fucking-weeb-rs"
version = "0.1.1"
authors = ["Jaume Delclòs Coll <cosarara97@gmail.com>"]

[dependencies]
gdk = "0.9.0"
gdk-pixbuf = "0.5.0"
gdk-sys = "0.7.0"
glib = "0.6.1"
glib-sys = "0.7.0"
gobject-sys = "0.7.0"
gtk = {version = "0.5.0", features = ["v3_16"]}
gtk-sys = "0.7.0"
json = "0.11"
lazy_static = "1.0"
log = "0.4.6"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
soup-sys = { version = "0.7.0", features = ["v2_42"] }
xdg = "^2.1"
