[package]
name = "fucking-weeb-rs"
version = "0.1.1"
authors = ["Jaume Delclòs Coll <cosarara97@gmail.com>"]

[dependencies]
gdk = "0.11"
gdk-pixbuf = "0.7"
glib = "0.8"
gtk = {version = "0.7.0", features = ["v3_16"]}
json = "0.11"
lazy_static = "1.0"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
directories = "2.0"
http_req  = "^0.5"
